# models/documento_programa.go
@@ -5,6 +5,7 @@ import (
 	"fmt"
 	"reflect"
 	"strings"
+	"time"
 
 	"github.com/astaxie/beego/orm"
 )
@@ -15,6 +16,7 @@ type DocumentoPrograma struct {
 	NumeroOrden           float64                `orm:"column(numero_orden);null"`
 	TipoDocumentoPrograma *TipoDocumentoPrograma `orm:"column(tipo_documento_programa);rel(fk)"`
 	Programa              int                    `orm:"column(programa)"`
+	FechaModificacion     string                 `orm:"column(fecha_modificacion);null"`
 }
 
 func (t *DocumentoPrograma) TableName() string {
@@ -28,6 +30,9 @@ func init() {
 // AddDocumentoPrograma insert a new DocumentoPrograma into database and returns
 // last inserted Id on success.
 func AddDocumentoPrograma(m *DocumentoPrograma) (id int64, err error) {
+	var t time.Time
+	t = time.Now()
+	m.FechaModificacion = fmt.Sprintf("%s", t.UTC().Format(time.UnixDate))
 	o := orm.NewOrm()
 	id, err = o.Insert(m)
 	return
@@ -127,6 +132,9 @@ func GetAllDocumentoPrograma(query map[string]string, fields []string, sortby []
 func UpdateDocumentoProgramaById(m *DocumentoPrograma) (err error) {
 	o := orm.NewOrm()
 	v := DocumentoPrograma{Id: m.Id}
+	var t time.Time
+	t = time.Now()
+	m.FechaModificacion = fmt.Sprintf("%s", t.UTC().Format(time.UnixDate))
 	// ascertain id exists in the database
 	if err = o.Read(&v); err == nil {
 		var num int64
